# house-party-POS

./: .gitignore  Pipfile  README.md  cart_row_template_init.py  drink.py  drink_template.ui  drink_template_init.py  main_window.py  main_window.ui  main_window_init.py  menu.py  order.py  patron.py  pos.py  pos.spec  pyproject.toml  requirements.txt  settle_up_dialog.py  settle_up_dialog.ui  settle_up_dialog_init.py  tab_row_template.ui  tab_row_template_init.py  user.py  utilities.py
.github/workflows/: build.yml  pyinstaller.yml
cart_row_template/: __init__.py  cart_row_template.ui
drink_template/: __init__.py  drink_template.ui  drink_template_init.py
main_window/: drink.py  main_window.py  main_window.ui  main_window_init.py  user.py
settle_up_dialog/: __init__.py  settle_up_dialog.py  settle_up_dialog.ui  settle_up_dialog_init.py
sounds/: 1.m4a  10.m4a  11.m4a  12.m4a  13.m4a  14.m4a  15.m4a  16.m4a  17.m4a  18.m4a  19.m4a  2.m4a  20.m4a  21.m4a  22.m4a  23.m4a  24.m4a  25.m4a  26.m4a  27.m4a  28.m4a  29.m4a  3.m4a  30.m4a  31.m4a  32.m4a  33.m4a  34.m4a  35.m4a  36.m4a  37.m4a  38.m4a  39.m4a  4.m4a  40.m4a  41.m4a  42.m4a  5.m4a  6.m4a  7.m4a  (+2 more)
tab_row_template/: __init__.py
