[tool.poetry]
name = "house-party-pos"
version = "0.2.2"
description = ""
authors = ["Brett Heinkel <bheinks@gmail.com>"]

[tool.poetry.dependencies]
python = "~3.12"
PyQt6 = "^6.6.1"
colorhash = "^2.0.0"
requests = "^2.31.0"
pyqtdarktheme = { git = "https://github.com/woopelderly/PyQtDarkTheme.git", branch = "python3.12" }
pillow = "^10.1.0"

[tool.poetry.group.dev.dependencies]
pyinstaller = "^6.3.0"
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
