[tool.poetry]
name = "house-party-pos"
version = "1.0.0"
description = ""
authors = ["Brett Heinkel <bheinks@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "~3.12"
PyQt6 = "^6.8.0"
colorhash = "^2.0.0"
requests = "^2.32.3"
pyqtdarktheme-fork = { git = "https://github.com/henriquegemignani/PyQtDarkTheme.git" }
pillow = "^10.4.0"

[tool.poetry.group.dev.dependencies]
pyinstaller = "^6.11.1"
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
