[tool.poetry]
name = "house-party-pos"
version = "1.0.3"
description = ""
authors = ["Brett Heinkel <bheinks@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "~3.13"
PyQt6 = "^6.9.1"
colorhash = "^2.1.0"
requests = "^2.32.5"
pyqtdarktheme-fork = "^2.3.4"
pillow = "^10.4.0"

[tool.poetry.group.dev.dependencies]
pyinstaller = "^6.16.0"
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
